feat(exemplos e exercicios): html e css na pedreira

--- a/modulo-03/exemplo-01.html
+++ b/modulo-03/exemplo-01.html
@@ -3,7 +3,7 @@
     <head>
         <title>Exemplo 01</title>
         <meta charset="utf-8">
-        
+
     </head>
     <body>
       <h1>Titulo 1</h1>
@@ -62,5 +62,6 @@
       <!-- src refere a url ou localidade -->
       <!-- src, alt, id... = atributos-->
       <!-- p, h1, a, small... = tag-->
+      <!-- rgba(0,0,0,0) - red/green/blue/alpha (opacidade)-->
     </body>
 </html>
