--- a/modulo-03/exercicio1.html
+++ b/modulo-03/exercicio1.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Wiki - Street Fighter</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-      <img src="logo_sf5.png" alt="Imagem" />
+      <img src="imgs/logo_sf5.png" alt="Imagem" />
       <h1>Street Fighter</h1>
       <hr>
       <h2>Sumário</h2>
