--- a/modulo-03/index.html
+++ b/modulo-03/index.html
@@ -4,25 +4,85 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body style="background: url(imgs/ryusf5.jpg) no-repeat; font-family:arial;">
-      <div class="principal" style="width: 550px; margin: auto;">
-        <div class="menu" style="background-color: rgba(132, 132, 132, 0.5); margin-top: 200px; border: 1px solid white; clear:both;">
-          <div style="">
-            <a href="index.html" style="color: #ffffff;text-decoration: none;font-weight: bold;">Início</a>
-          </div>
-          <div style="">
+  <body style="background: url(imgs/ryusf51.png) no-repeat;
+               font-family: arial;
+               background-position: 50% 0%;">
+      <div class="principal" style="width: 702px;
+                                    margin: auto;">
+        <div class="menu" style="background-color: rgba(132, 132, 132, 0.5);
+                                 margin: 250px auto 61px;
+                                 border: 1px solid #C0C0C0;
+                                 width: 502px;
+                                 height: 35px;
+                                 border-radius: 10px;
+                                 padding-top: 20px">
+            <a href="index.html" style="color: #ffffff;
+                                        text-decoration: none;
+                                        font-weight: bold;
+                                        margin-left: 37px;">Início</a>
             <a href="https://www.google.com.br/webhp?sourceid=chrome-instant&rlz=1C1CHZL_pt-BRBR712BR712&ion=1&espv=2&ie=UTF-8#q=street+fighter&tbm=nws"
-            style="color: #ffffff;text-decoration: none;font-weight: bold;">Notícias</a>
-          </div>
-          <div style="">
-            <a href="ficha-tecnica.html" style="color: #ffffff;text-decoration: none;font-weight: bold;">Ficha Técnica</a>
-          </div>
-          <div style="">
-            <a href="sobre.html" style="color: #ffffff;text-decoration: none;font-weight: bold;">Sobre</a>
-          </div>
+            style="color: #ffffff;
+                   text-decoration: none;
+                   font-weight: bold;
+                   margin-left: 37px;">Notícias</a>
+            <a href="ficha-tecnica.html" style="color: #ffffff;
+                                                text-decoration: none;
+                                                font-weight: bold;
+                                                margin-left: 37px;">Ficha Técnica</a>
+            <a href="sobre.html" style="color: #ffffff;
+                                        text-decoration: none;
+                                        font-weight: bold;
+                                        margin-left: 37px;">Sobre</a>
         </div>
         <div class="conteudo">
-
+            <div class="cabecalho" style="background-color: #444444;
+                                          height: 63px;
+                                          padding-top: 15px;">
+                <h2 style="color: #ffffff;
+                           margin: 10px 0 0 10px;">Street Fighter</h1>
+            </div>
+            <div class="informacoes" style="height: auto; width: 672px; background-color: #EDEDED; padding: 1px 15px 0;">
+              <h2>Sumário</h2>
+              <ul>
+                <li><a href="#perdi">O jogo</a></li><!-- perdi -->
+                <li><a href="#historia">História</a></li>
+                <li><a href="#jogos_da_serie">Jogos da série</a></li>
+                <li><a href="#sf1">Street Fighter</a></li>
+                <li><a href="#sf2">Street Fighter II</a></li>
+                <li><a href="#sf3">Street Fighter III</a></li>
+                <li><a href="#sfa">Street Fighter Alpha</a></li>
+              </ul>
+              <hr>
+              <h2 id="perdi">O jogo</h2>
+              <p>
+                <em>Street Fighter</em> é uma popular série de jogos de luta na qual o jogador controla lutadores de diversas partes do mundo, cada qual com seus golpes especiais. A série é propriedade da empresa de jogos Capcom e teve seu primeiro jogo lançado em agosto de 1987. Algumas séries são integradas à SF, como     por exemplo <strong>Final Fight</strong> e <strong>Slam Masters</strong>.
+              </p>
+              <h2 id="historia">História</h2>
+              <p>
+                O primeiro jogo de luta foi Heavyweight Champ, lançado pela SEGA para os arcades em 1976. O próximo só apareceria vários anos depois, em 1984, com o jogo Karate Champ da DataEast. Este é considerado o primeiro jogo de luta para dois jogadores, apresentando dois controles. Seguindo seus passos, a     Konami lançou Yie-Ar Kung Fu, em 1985 com gráficos impressionantes (para a época) e cheio de detalhes nos cenários. Vendo o sucesso de ambos os games, a Capcom decidiu lançar seu próprio jogo que tivesse características de ambos os jogos. Assim nasceu Street Fighter
+              </p>
+              <hr>
+              <h2 id="jogos_da_serie">Jogos da série</h2>
+              <h3 id="sf1">Street Fighter</h3>
+              <p>
+                Street Fighter fez pouco impacto em seu lançamento. Porém seus controles eram inovadores, com 1 joystick e 2 botões hidráulicos, que dependendo da força davam potência diferente ao golpe. Como geralmente se batia com muita força, foram trocados pelos 6 botões que se tornaram tradição na série. O     game acompanhava Ryu ou Ken , duelando com dez lutadores de 5 países. O game introduziu os golpes especiais da Punho Ondulante, que ficariam com Ryu e Ken pelo resto da série. Sagat, ainda sem a cicatriz no peito, é o chefe final do jogo. Os demais personagens são Eagle, Lee, Joe, Gen, Geki, Retsu,     Adon, Mike e Birdie.
+              </p>
+              <h3 id="sf2">Street Fighter II</h3>
+              <p>
+                Inicialmente lançado como Street Fighter II: The World Warrior em 1991, SF II tornou-se um grande sucesso, popularizando o estilo de jogos de luta,que virou febre mundial nos Arcades.
+              </p>
+              <p>
+                O jogo também inovou a forçar o protagonista viajar por diferentes países através de cenários locais, como os elefantes na fase do Dhalsim, elementos japoneses nos estágios de E. Honda e Ryu (mostrando cenários tipicamente orientais) e inclusive a selva amazônica brasileira na fase relativa ao     Blanka.
+              </p>
+              <h3 id="sf3">Street Fighter III</h3>
+              <p>
+                Street Fighter III fora lançado em 1997. Não teve tanto sucesso quanto o II. Um dos motivos atribuídos foi pelo advento de jogos de luta em 3D como Tekken, e a ausência de muitos personagens famosos do jogo anterior.
+              </p>
+              <h3 id="sfa">Street Fighter Alpha</h3>
+              <p>
+                Street Fighter Alpha é uma subsérie, com três games e uma compilação por hora.
+              </p>
+            </div>
         </div>
       </div>
   </body>
