feat(Wiki SF): css em arquivo próprio.

--- a/modulo-03/wikisf/index.html
+++ b/modulo-03/wikisf/index.html
@@ -3,45 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body style="background: url(imgs/ryusf51.png) no-repeat;
-               font-family: arial;
-               background-position: 50% 0%;">
-      <div class="principal" style="width: 702px;
-                                    margin: auto;">
-        <div class="menu" style="background-color: rgba(132, 132, 132, 0.5);
-                                 margin: 250px auto 61px;
-                                 border: 1px solid #C0C0C0;
-                                 width: 502px;
-                                 height: 35px;
-                                 border-radius: 10px;
-                                 padding-top: 20px">
-            <a href="index.html" style="color: #ffffff;
-                                        text-decoration: none;
-                                        font-weight: bold;
-                                        margin-left: 37px;">Início</a>
-            <a href="https://www.google.com.br/webhp?sourceid=chrome-instant&rlz=1C1CHZL_pt-BRBR712BR712&ion=1&espv=2&ie=UTF-8#q=street+fighter&tbm=nws"
-            style="color: #ffffff;
-                   text-decoration: none;
-                   font-weight: bold;
-                   margin-left: 37px;">Notícias</a>
-            <a href="ficha-tecnica.html" style="color: #ffffff;
-                                                text-decoration: none;
-                                                font-weight: bold;
-                                                margin-left: 37px;">Ficha Técnica</a>
-            <a href="sobre.html" style="color: #ffffff;
-                                        text-decoration: none;
-                                        font-weight: bold;
-                                        margin-left: 37px;">Sobre</a>
+  <body>
+      <div class="principal">
+        <div class="menu">
+            <a href="index.html">
+              Início
+            </a>
+            <a href="https://www.google.com.br/webhp?sourceid=chrome-instant&rlz=1C1CHZL_pt-BRBR712BR712&ion=1&espv=2&ie=UTF-8#q=street+fighter&tbm=nws">
+              Notícias
+            </a>
+            <a href="ficha-tecnica.html">
+              Ficha Técnica
+            </a>
+            <a href="sobre.html">
+              Sobre
+            </a>
         </div>
         <div class="conteudo">
-            <div class="cabecalho" style="background-color: #444444;
-                                          height: 63px;
-                                          padding-top: 15px;">
-                <h2 style="color: #ffffff;
-                           margin: 10px 0 0 10px;">Street Fighter</h1>
+            <div class="cabecalho">
+                <h2>Street Fighter</h2>
             </div>
-            <div class="informacoes" style="height: auto; width: 672px; background-color: #EDEDED; padding: 1px 15px 0;">
+            <div class="informacoes">
               <h2>Sumário</h2>
               <ul>
                 <li><a href="#perdi">O jogo</a></li><!-- perdi -->
