feat(Exercicio 1): corrigido

--- a/modulo-04/JS-Dia-01/rodarSpecs.html
+++ b/modulo-04/JS-Dia-01/rodarSpecs.html
@@ -19,7 +19,7 @@
     <script src="specs/findSpecs.js"></script>
     <script src="specs/subtrairSpecs.js"></script>
     <!--<script src="specs/iguaisSpecs.js"></script>-->
-    <script src="specs/ctlCSpecs.js"></script>
+    <script src="specs/ctrlCSpecs.js"></script>
   </head>
   <body>
   </body>
