--- a/modulo-04/Exemplos/hello-js.html
+++ b/modulo-04/Exemplos/hello-js.html
@@ -8,5 +8,6 @@
     <h2>Dia 01 - Hello JS!</h2>
     <script type="text/javascript" src="outro-arquivo.js"></script>
     <script type="text/javascript" src="hello-js.js"></script>
+    <script type="text/javascript" src="arguments.js"></script>
   </body>
 </html>
