fix(rodarSpecs) descomentar script

--- a/modulo-04/JS-Dia-01/rodarSpecs.html
+++ b/modulo-04/JS-Dia-01/rodarSpecs.html
@@ -18,7 +18,7 @@
     <!-- testes aqui -->
     <script src="specs/findSpecs.js"></script>
     <script src="specs/subtrairSpecs.js"></script>
-    <!--<script src="specs/iguaisSpecs.js"></script>-->
+    <script src="specs/iguaisSpecs.js"></script>
     <script src="specs/ctrlCSpecs.js"></script>
   </head>
   <body>
