--- a/modulo-04/JS-Dia-02/rodarSpecs.html
+++ b/modulo-04/JS-Dia-02/rodarSpecs.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="marvel.js"></script>
     <script type="text/javascript" src="herois.js"></script>
     <!-- testes aqui -->
-    <script src="specs/ctrlCSpecs.js"></script>
+    <script type="text/javascript" src="specs/foraDaGuerraCivil.js"></script>
   </head>
   <body>
   </body>
