feat(Exercicios JS Dia1/2): corrigidos

--- a/modulo-04/JS-Dia-01/rodarSpecs.html
+++ b/modulo-04/JS-Dia-01/rodarSpecs.html
@@ -15,11 +15,13 @@
     <script type="text/javascript" src="exercicio4.js"></script>
     <script type="text/javascript" src="exercicio5.js"></script>
     <script type="text/javascript" src="exercicio6.js"></script>
+    <script type="text/javascript" src="exercicio7.js"></script>
     <!-- testes aqui -->
     <script src="specs/findSpecs.js"></script>
     <script src="specs/subtrairSpecs.js"></script>
     <script src="specs/iguaisSpecs.js"></script>
     <script src="specs/ctrlCSpecs.js"></script>
+    <script src="specs/mesclarSpecs.js"></script>
   </head>
   <body>
   </body>
