--- a/modulo-04/JS-Dia-02/rodarSpecs.html
+++ b/modulo-04/JS-Dia-02/rodarSpecs.html
@@ -9,10 +9,11 @@
     <script src="lib/jasmine-2.3.4/jasmine-html.js"></script>
     <script src="lib/jasmine-2.3.4/boot.js"></script>
     <!-- código fonte aqui -->
+    <script type="text/javascript" src="lib/utilitarios.js"></script>
     <script type="text/javascript" src="marvel.js"></script>
     <script type="text/javascript" src="herois.js"></script>
     <!-- testes aqui -->
-    <script type="text/javascript" src="specs/foraDaGuerraCivil.js"></script>
+    <script type="text/javascript" src="specs/heroisSpecs.js"></script>
   </head>
   <body>
   </body>
